# applications

./: b.sh
CAR/: README.md  car.ipynb
CAR/src/plug_in/adaptive_gridsampler_ascend/: CMakeLists.txt  build.sh  gridsampler.py
CAR/src/plug_in/adaptive_gridsampler_ascend/cmake/: config.cmake
CAR/src/plug_in/adaptive_gridsampler_ascend/cmake/util/: aicpu_parser_ini.py  gen_impl_and_mrege_json.sh  gen_ops_filter.sh  insert_op_info.py  merge_aicpu_info_json.sh  parse_ini_to_json.py
CAR/src/plug_in/adaptive_gridsampler_ascend/cmake/util/makeself/: makeself-header.sh  makeself.sh
CAR/src/plug_in/adaptive_gridsampler_ascend/cpukernel/: CMakeLists.txt
CAR/src/plug_in/adaptive_gridsampler_ascend/cpukernel/impl/: adaptive_gridsampler_grad_kernels.cc  adaptive_gridsampler_grad_kernels.h  adaptive_gridsampler_kernels.cc  adaptive_gridsampler_kernels.h
CAR/src/plug_in/adaptive_gridsampler_ascend/cpukernel/op_info_cfg/aicpu_kernel/: adaptive_gridsampler.ini
CNNCTC_MindSpore/: CNNCTC.ipynb  README.md  default_config.yaml  eval.py  train.py
CRA/: readme.md
Colorization/: Colorization.ipynb  readme.md
DenseNet/: DenseNet.ipynb
DuConv_mindspore/: README.md  jupyter.py  predict.py  train.py
FairMOT-mindspore-jupyter/: README.md  README.zh.md  default_config.yaml
Faster-RCNN/: Faster-Rcnn_v1.ipynb  README.md
GoogLeNet/: GoogLeNet.ipynb  GoogLeNet.py  README.md  test.py  train.py
HuaweiMindSpore/: default_config.yaml  momentum.ipynb
ICNet/: README.md
ICON/: .gitignore  README.md
LCH-tools/: README.md  requirements.txt  server.py
Lite-HRNet/: example.ipynb  readme.md
MASS/: MASS.ipynb  (+4 more)
(+766 files in other folders)
